# jostar

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
Jostar/: asgi.py  settings.py  urls.py  wsgi.py
jostars/: apps.py  models.py  paginations.py  serializers.py  urls.py  views.py
jostars/management/commands/: jostar_ratings_kafka_consumer.py
jostars/services/: rating_cache.py
proxies/: kafka.py  redis.py
users/: models.py  serializers.py  urls.py  views.py
utils/: cryptography.py
